...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/welcome_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/base_btn"
        android:padding="20dp"
        android:text="@string/welcome_btn"
        android:textSize="@dimen/size_stylo"
        android:textColor="@color/my_white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tw_main" />

    <Button
        android:id="@+id/welcome_rules_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/rules_btn"
        android:padding="10dp"
        android:text="@string/rules_btn_label"
...
        android:textSize="@dimen/size_crayon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_btn" />

    <Button
        android:id="@+id/stats_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/stats_btn"
        android:padding="10dp"
        android:textSize="@dimen/size_crayon"
...
